--- a/GMJavescript/test.html
+++ b/GMJavescript/test.html
@@ -10,6 +10,7 @@ function success(data)
 
 function call_sayhello()
 {
+/* JSON Data */
 var data = {
      "companyname"  : "Bosch",
      "employeename" : "Elumalai",
